# crs

./: .gitignore  LICENSE  Makefile  README.md  compile_commands.json  run
lib/: .gitignore  Cargo.toml  Makefile  build.rs  cbindgen.toml
lib/src/: int.rs  lib.rs  math.rs  str.rs  vec.rs
lib/src/var/: mod.rs  str.rs
lib/src/vec/: vec_simple_ops.rs  vec_wrappers.rs
src/: call_rust.c
